fixed left side being too close to right.

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin-left: 20px;
+    margin: 20px;
     padding: 6px;
 }
 
